2007-12-27  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (decode_8bit): Now takes a default_charset
	argument which we use in place of the locale charet if
	non-NULL. We also now always include this charset in our list of
	charsets to check for a best-match (obviously this charset is
	unlikely to be an exact fit if this function is getting called, so
	we place it at the end of the list).
	(rfc2047_decode_word): If given a valid charset in the
	encoded-word token, always ue that for charset conversion to UTF-8
	even if it doesn't convert fully. We don't want to fall back to
	the user's supplied charset list because it may contain iso-8859-1
	which will likely always be a 'best-match' charset.

2007-12-26  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_decode_8bit): Made public.

	* gmime/internet-address.c (decode_mailbox): Instead of doing our
	own thing to convert raw 8bit/multibyte text sequences into UTF-8,
	use the same function we use in gmime-utils.c's header decoder.

2007-12-25  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/charset-map.c: New source file to generate the charset
	map (moved out of gmime-charset.c)

	* gmime/gmime-charset.c (main): Removed.

2007-12-25  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-charset.c (main): Cleaned up the logic and made it
	so that we can alias a block to a previous block if the blocks are
	identical rather than just aliasing when all values in the block
	are identical. Happens to make no difference in the output, but
	the logic is now there if that ever changes.

2007-12-24  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-charset-map-private.h: Regenerated.

	* gmime/gmime-charset.c (known_iconv_charsets): Map all of the
	gb2312 aliases to GBK as GBK is a superset of gb2312 (apparently
	some clients are tagging GBK as gb2312 which is missing some
	glyphs contained within GBK).
	(main): Added iso-8859-6 to the table for Arabic support.
